parser/src/ast/snapshots/wasm_liquiddoc_parser__ast__fixture_tests__fixture_fixture8.snap
---
source: src/ast/fixture_tests.rs
expression: "@prompt\nThis is a prompt\nIt can have multiple lines"
---
[
  {
    "type": "TextNode",
    "value": "@prompt\nThis is a prompt\nIt can have multiple lines",
    "position": {
      "start": 10,
      "end": 61
    },
    "source": "@prompt\nThis is a prompt\nIt can have multiple lines"
  }
]
